# snoozy_final

./: CMakeLists.txt  Kconfig  app.overlay  bl54l15_dvk_nrf54l15_cpuapp.overlay  prj.conf  prj_old.conf
drivers/: Kconfig
drivers/ads1299/: CMakeLists.txt  Kconfig  ads1299.c
drivers/bno086/: CMakeLists.txt  KConfig  Kconfig  bno055.c  bno055.h  bno086.c  bno086.h  bno086_hal.c  bno086_hal.h  sh2.c  sh2.h  sh2_SensorValue.c  sh2_err.h  shtp.c
dts/: ceva,bno086.yaml  ti,ads1299.yaml
dts/bindings/: ceva,bno086.yaml  ti,ads1299.yaml
src/: ble.c  ble.h  eeg_snippets.h  imu.h  main.c  main1.c  main2.c  main3.c  main_ads.c  main_bno.c  main_mosi.c  main_pmic.c
